[package]
name = "log-instrument"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.66"
quote = "1.0.33"
syn = { version = "2.0.29", features = ["full", "extra-traits"] }

[dev-dependencies]
env_logger = "0.10.0"
log = "0.4.20"
log-instrument = { path = "../log-instrument" }
simple_logger = "4.2.0"
