[package]
name = "log-instrument"
version = "0.1.3"
edition = "2021"
description = "Offers an attribute procedural macro that adds `log::trace!` events at the start and end of attributed functions."
license = "Apache-2.0"

[dependencies]
log-instrument-macros = { path = "../log-instrument-macros", version = "0.1.1" }
log = "0.4.20"

[dev-dependencies]
env_logger = "0.10.0"
