[package]
name = "log-instrument"
version = "0.4.0"
edition = "2021"
description = "Offers an attribute procedural macro that adds `log::trace!` events at the start and end of attributed functions."
license = "Apache-2.0"

[dependencies]
log-instrument-macros = { path = "../log-instrument-macros", version = "0.2.0" }
log = "0.4.20"
env_logger = "0.10.0"
